# AEROSPACEMODEL-ASIT

./: .gitguardian.yaml  .gitignore  .markdownlint.json  .pre-commit-config.yaml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  HCDS_CHARTER_README.md  Model_Digital_Constitution.md  README.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  TROUBLESHOOTING.md  markdown-link-check.json
AQUA-V-IP/: AQUA_V_FOUNDATIONAL_PAPER_v1.0.md  README.md
ASIGT/: ASIGT_CORE.md
ASIT/: ASIT_CORE.md
Governance/: EAARF_CHARTER_DRAFT.md  EASA_ESA_AI_GOVERNANCE_STANDARD_v1.0.md  GOV-CHARTER-SPLIT-001.md  HUMAN_CENTRIC_DIGITAL_SYSTEMS_CHARTER_v1.0.md  NPA_2025-07_RESPONSE.md  README.md
Kiss-scaffold/: .gitignore  Kiss-scaffold.py  README.md
OPT-IN_FRAMEWORK/: 00_INDEX.md  README.md
assessments/: README.md  ngi_assessment.result.example.yaml  ngi_assessment.template.yaml  ngi_assessment.yaml
docs/: AMPEL360_CV_003_IMPLEMENTATION_SUMMARY.md  AMPEL_TECHNICAL_VALIDATION_DOSSIER.md  ASIGT_PIPELINE_IMPLEMENTATION.md  ATA_27_BREX_INSTRUCTIONS.md  ATA_28_BREX_INSTRUCTIONS.md  CNOT_AGENT_LIFECYCLE_ARCHITECTURE.md  CNOT_GATES_ARCHITECTURE.md  CONTENT_PIPELINE.md  EASA_FAA_VOCABULARY_MAPPING.md  GITHUB_MARKETPLACE_ACTIONS_CATALOG.md  HCDS_AVIATION_INTEGRATION.md  HCDS_QUICK_START_GUIDE.md  HPC_QUANTUM_AGENTIC_ARCHITECTURE.md  IMPLEMENTATION_SUMMARY.md  LOGIC_GLOSSARY.md  NGI_IMPROVEMENT_SUMMARY.md  NGI_POLICY_SYSTEM.md  NGI_QUICKSTART.md  ONTOLOGY_DIAGRAM.md  S1000D_TEMPLATE_GUIDE.md  TERMS_MAP.yaml
examples/: README.md  ampel360_identifier_examples.py  cnot_gates_demo.py  marketplace_agents_demo.py  run_amm_pipeline_demo.py
lifecycle/: LC_PHASE_REGISTRY.yaml  TLI_GATE_RULEBOOK.yaml  T_SUBDOMAIN_LC_ACTIVATION.yaml
pipelines/: amm_pipeline.yaml  cmm_pipeline.yaml  cnot_transformation_pipeline.yaml  constellation_mesh_pipeline.yaml  dt_documentation_pipeline.yaml  hpc_mdo_pipeline.yaml  ipc_pipeline.yaml  srm_pipeline.yaml
policy/: README.md  hcds_technical_controls_v1.yaml  ngi_policy_v1.yaml
roadmaps/: HCDS_90_DAY_TRANSITION_ROADMAP_v1.md
schemas/: README.md  ampel360_artifact_types.yaml
scripts/: generate_wbs_meta_files.py  ngi_evaluator.py
templates/: README.md
tests/: test_ampel_benchmark.py  test_ata28_11_5d.py  test_ata28_11_ecr.py  test_ata28_11_fai_relocation.py  test_ata28_11_governance_lc01.py  test_ata28_11_lc02_packages.py  test_ata28_11_lc03_packages.py  test_ata28_11_lc06_relocation.py  test_ata28_11_mtl.py  test_ata28_11_stp.py  test_ata28_atex_esd.py  (+28 more)
(+631 files in other folders)
